# SkiTAK

./: .gitignore  Makefile  PLAN.md  README.md
.github/workflows/: ci.yml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: clients.ts  http.ts  index.ts
dashboard/src/hooks/: useCoTSocket.ts  useOtsSocket.ts
dashboard/src/pages/: ClientsPage.tsx  LiveMapPage.tsx  Login.tsx  SessionReplayPage.tsx  SessionsPage.tsx
dashboard/src/store/: index.ts
dashboard/src/types/: index.ts
docker/: .env.example  docker-compose.dev.yml  docker-compose.pi.yml  docker-compose.yml
docker/mediamtx/: mediamtx.yml
docker/mumble/: murmur.ini
docker/nginx/: entrypoint.sh  options-ssl.conf  skitak.conf  skitak.conf.template
docker/opentakserver/: Dockerfile  entrypoint.sh
docker/opentakserver/skitak_extensions/: __init__.py
docker/postgres/: init.sql
docker/rabbitmq/: rabbitmq.conf
docs/: deployment.md
ios/: README.md  project.yml
ios/SkiTAK/: Info.plist  SkiTAK.entitlements
ios/SkiTAK/App/: AppDelegate.swift  ContentView.swift  OnboardingView.swift  SkiTAKApp.swift
server/: README.md  pyproject.toml
server/skitak/: __init__.py  api.py  clients.py  common.py  enrollment.py  geofence.py  groups.py  ingest.py  join.py  plugin.py  routes.py  schema.sql  sessions.py  tracks.py
server/tests/: conftest.py  test_enrollment.py  test_geofence.py  test_groups.py  test_ingest.py  test_planned_routes.py  test_replay.py  test_routes.py  test_sessions.py
(+17 files in other folders)
