[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skitak"
version = "0.1.0"
description = "SkiTAK extensions for OpenTAKServer — sessions, tracks, and zero-friction enrollment for outdoor guiding"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SkiTAK" }]
# opentakserver is deliberately not listed: the plugin is installed into an
# environment where a pinned opentakserver already exists (see docker/opentakserver/Dockerfile).
dependencies = []

[project.entry-points."opentakserver.plugin"]
skitak = "skitak.plugin:SkiTAKPlugin"

[tool.setuptools.packages.find]
include = ["skitak*"]

[tool.setuptools.package-data]
skitak = ["*.sql"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501"]
